--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-microservice",
+  "name": "todo-exercises-microservice",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
